# Tennis-Monitor

./: .dockerignore  .env.example  .gitignore  BUGFIX_SILENT_EXIT.md  COMPLETION_SUMMARY.md  Dockerfile  IMPLEMENTATION.md  MONITOR_FIX_COMPLETE.md  PUSH_NOTIFICATIONS.md  PWA_SETUP.md  QUICK_START.md  README.md  debug_attrs.py  debug_coplayer.py  debug_courts.py  debug_html.py  debug_login.py  debug_onclick.py  debug_run.py  docker-compose.yml  entrypoint.sh  map_courts.py  pyproject.toml  requirements-dev.txt  requirements.txt  show_features.py  test_daily_reset.py  test_duplicate_prevention.py  test_monitor_debug.py  test_monitor_loop.py  test_notifications.py  test_persistent_session.py  verify_monitor_fix.py
.github/: copilot-instructions.md
scripts/: deploy_to_nas.sh
src/: api_server.py  main.py
src/tennis_monitor/: __init__.py  api.py  booking.py  config.py  monitor.py  notifications.py  scraper.py  utils.py
src/tennis_monitor/web/: README.md  app.js  index.html  manifest.json  service-worker.js  styles.css
tests/: __init__.py  test_booking.py  test_config.py  test_monitor.py
